feat(k8s): add Kubernetes deployment manifests for orchestrator and workers
- Introduced a StatefulSet for worker pods with init container for demo table generation.
- Added Deployment for orchestrator with necessary configurations and mTLS support.
- Created headless service for worker pods to enable deterministic DNS routing.
- Included a README for Kubernetes deployment instructions and prerequisites.
- Added a script to generate demo tables and performance benchmarking scripts.
- Implemented trace context propagation tests and updated documentation accordingly.
- Established performance baseline documentation for RainbowKV.

--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   fuzz:
@@ -28,4 +29,14 @@ jobs:
       - name: Run fuzz smoke
         env:
           FUZZ_RUNS: "1000000"
+          FUZZ_SANITIZER: none
         run: ./scripts/fuzz-ci.sh
+
+      - name: Upload fuzz artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: fuzz-artifacts
+          path: |
+            fuzz/artifacts/**
+            fuzz/corpus/**
