--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,26 @@ jobs:
       - name: Run smoke e2e
         run: ./scripts/smoke-e2e.sh
 
+  manifests:
+    name: k8s-manifest-render
+    runs-on: ubuntu-latest
+    needs: build_test
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Helm
+        uses: azure/setup-helm@v4
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
+
+      - name: Render Helm chart
+        run: helm template lattice deployments/helm/lattice -n lattice > /tmp/lattice-helm.yaml
+
+      - name: Render kustomize manifests
+        run: kubectl kustomize deployments/k8s > /tmp/lattice-k8s.yaml
+
   tla_model:
     name: tla-model
     runs-on: ubuntu-latest
