--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install cargo-fuzz
         run: cargo install cargo-fuzz --locked
 
+      - name: Ensure fuzz script is executable
+        run: chmod +x ./scripts/fuzz-ci.sh
+
       - name: Run fuzz smoke
         env:
           FUZZ_RUNS: "1000000"
